[package]
name = "mamba"
version = "0.1.0"
edition = "2021"
authors = ["Armand Kamffer <kamffer1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
